--- a/ProjectDiamondShop/Views/Introduce/Marquise.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Marquise.cshtml
@@ -16,8 +16,8 @@
         }
 
         body {
-            background-color: #222;
-            color: #e0e0e0;
+            background-color: #E9F2EB;
+            color: #333;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
@@ -28,12 +28,14 @@
         }
 
         .navbar {
-            background: #333 !important;
+            background: #fff !important;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 0.5rem 1rem;
+            border-radius: 30px;
             margin-bottom: 20px;
             transition: top 0.3s;
             margin: 0 auto;
+            max-width: 95%;
         }
 
             .navbar .navbar-brand {
@@ -50,7 +52,7 @@
                 }
 
             .navbar .nav-link {
-                color: #fff !important;
+                color: #333 !important;
                 font-weight: bold;
                 margin-right: 20px;
                 position: relative;
@@ -58,7 +60,7 @@
 
                 .navbar .nav-link:hover,
                 .navbar .nav-link.active {
-                    color: #ddd !important;
+                    color: #000 !important;
                 }
 
                 .navbar .nav-link:not(.dropdown-toggle)::after {
@@ -69,7 +71,7 @@
                     background: #28a745;
                     transition: width .3s;
                     position: absolute;
-                    bottom: 0;
+                    bottom: 0; /* Position it at the bottom of the nav link */
                     left: 0;
                 }
 
@@ -119,25 +121,15 @@
             content: none;
         }
 
-        html, body {
-            height: 100%;
-            margin: 0;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-        }
-
         .container {
             flex: 1;
         }
 
         .footer {
-            background-color: #333;
+            background-color: #fff;
             padding: 20px 0;
             text-align: center;
-            color: #FFD700;
+            color: #333;
             box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
             position: relative;
             bottom: 0;
@@ -146,13 +138,13 @@
         }
 
             .footer a {
-                color: #FFD700;
+                color: #00509e;
                 text-decoration: none;
                 margin: 0 10px;
             }
 
                 .footer a:hover {
-                    color: #FFF;
+                    color: #003f7d;
                     text-decoration: underline;
                 }
 
@@ -295,7 +287,7 @@
 
         <div class="container center">
             <div class="row">
-                <p class="description justify">
+                <p class="decription justify">
                     The marquise cut diamond, with its elongated and pointed ends, offers a distinctive and elegant appearance.
                     The marquise cut’s unique shape not only maximizes carat weight, making the diamond appear larger, but also flatters the finger with its elongated design.
                     When selecting a Marquise diamond, it’s essential to ensure symmetrical proportions and be aware of the potential “bow-tie” effect in the center.
@@ -306,7 +298,7 @@
                     In this article we will discuss everything you need to know about the marquise cut characteristics and how to get the best bang for your buck when purchasing one.
                 </p>
                 <h1>The Marquise Diamond History</h1>
-                <p class="description justify">
+                <p class="decription justify">
                     Marquise diamonds have a long and fascinating history.
                     In the 18th century, King Louis XV of France requested a diamond be cut to resemble the lips of his mistress, the Marchioness Madame de Pompadour, Jean Antoinette Poisson.
                     While the narrow design has been refined over time, it maintains similarities to the original.
@@ -320,7 +312,7 @@
                     <b>What is a Marquise Diamond?</b>
                 </h2>
 
-                <p class="description justify">
+                <p class="decription justify">
                     A marquise diamond boasts 56 facets in a longer shape that ends with a point on each side.
                     This impressive and distinct appearance makes a marquise diamond a unique choice for those who want something different.
                     Thanks to the elongated shape, a marquise cut seems larger than other diamonds of the same carat weight and often cause the wearer’s fingers to look thinner.
@@ -328,7 +320,7 @@
                 <img src="~/Image/Introlmage/marquise1.png" alt="Destination 4" style="width: 50%;margin:auto" />
 
                 <h2 class="wp-block-heading">Marquise Cut Diamond – Length to Width Ratio</h2>
-                <p class="description justify">
+                <p class="decription justify">
                     When it comes to choosing a length to width ratio for your marquise diamond, remember this decision is primarily based on personal preference.
                     Above all, you want the diamond to look stunning to the naked eye and match the style of the wearer.
                     Popular length to width ratios for marquise diamonds range from 1.70-2.15. Length to width ratio can be determined by dividing the length of a diamond by its width.
@@ -336,7 +328,7 @@
                     To represent how various marquise diamonds appear—depending on their length to width ratio—we’ve included three examples.
                 </p>
                 <img src="~/Image/Introlmage/marquise2.png" alt="Destination 4" style="width: 100%;margin:auto" />
-                <p class="description justify">
+                <p class="decription justify">
                     The marquise with a ratio of 1.75 is slightly stockier and may offer a bit more durability than those with the higher ratios.
                     The 1.95 diamond is more slender and maintains ample stability. The diamond with a 2.15 ratio is further elongated and may have slightly less durability than the others.
                     Overall, no marquise shape is fundamentally better than another. Choose what most appeals to you and ensure the diamond is well cut and well set in the jewelry.
@@ -344,17 +336,17 @@
                     Symmetry is critical, as even the slightest difference can take away from the stone’s beauty and elegance.
                 </p>
                 <h2 class="wp-block-heading">Bowtie Effect in Marquise Diamonds</h2>
-                <p class="description justify">
+                <p class="decription justify">
                     Due to their elegant and elongated shape, nearly all marquise diamonds contain a bowtie effect.
                     The dark space, referred to as the bowtie, stretches across the diamond’s center and can impact the beauty of the stone.
                     Bowtie severity differs across marquise diamonds.
                     In some cases, the bowtie is noticeable to the naked eye, while other times it’s nearly invisible.
                 </p>
-                <p class="description justify">
+                <p class="decription justify">
                     Look for a marquise diamond without a dominant bowtie, as this will detract from the magnificence of your stone.
                     We highly recommend a diamond expert review any marquise before purchase.
                 </p>
-                <p class="description justify">In the images below, notice the significant difference between a bowtie and non-bowtie diamond.</p>
+                <p class="decription justify">In the images below, notice the significant difference between a bowtie and non-bowtie diamond.</p>
                 <img src="~/Image/Introlmage/marquise3.png" alt="Destination 4" style="width: 100%;margin:auto" />
                 <h2 class="wp-block-heading">Size and Carat Weight Comparison</h2>
                 <p>Imagining how big certain carat weight is can be difficult. We decided to make it easy for everybody and made this side by side comparison to a US quarter.</p>
