--- a/ProjectDiamondShop/Views/Introduce/Heart.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Heart.cshtml
@@ -16,8 +16,8 @@
         }
 
         body {
-            background-color: #222;
-            color: #e0e0e0;
+            background-color: #E9F2EB;
+            color: #333;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
@@ -28,12 +28,14 @@
         }
 
         .navbar {
-            background: #333 !important;
+            background: #fff !important;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 0.5rem 1rem;
+            border-radius: 30px;
             margin-bottom: 20px;
             transition: top 0.3s;
             margin: 0 auto;
+            max-width: 95%;
         }
 
             .navbar .navbar-brand {
@@ -50,7 +52,7 @@
                 }
 
             .navbar .nav-link {
-                color: #fff !important;
+                color: #333 !important;
                 font-weight: bold;
                 margin-right: 20px;
                 position: relative;
@@ -58,7 +60,7 @@
 
                 .navbar .nav-link:hover,
                 .navbar .nav-link.active {
-                    color: #ddd !important;
+                    color: #000 !important;
                 }
 
                 .navbar .nav-link:not(.dropdown-toggle)::after {
@@ -69,7 +71,7 @@
                     background: #28a745;
                     transition: width .3s;
                     position: absolute;
-                    bottom: 0;
+                    bottom: 0; /* Position it at the bottom of the nav link */
                     left: 0;
                 }
 
@@ -134,10 +136,10 @@
         }
 
         .footer {
-            background-color: #333;
+            background-color: #fff;
             padding: 20px 0;
             text-align: center;
-            color: #FFD700;
+            color: #333;
             box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
             position: relative;
             bottom: 0;
@@ -146,13 +148,13 @@
         }
 
             .footer a {
-                color: #FFD700;
+                color: #00509e;
                 text-decoration: none;
                 margin: 0 10px;
             }
 
                 .footer a:hover {
-                    color: #FFF;
+                    color: #003f7d;
                     text-decoration: underline;
                 }
 
@@ -293,9 +295,9 @@
 
         <h2 class="text-center" style="margin-top: 48px;">Heart Diamond Story</h2>
 
-        <div class="container center">
+        <div class="container center ">
             <div class="row ">
-                <p class="description justify">
+                <p class="decription justify">
                     While not as prevalent in engagement rings as other shapes, the heart-shaped diamond is certainly a unique emblem of love and affection.
                     This distinctive shape is best showcased in larger diamonds, ensuring its romantic silhouette is clearly visible.
                     The heart shaped diamond is based on the round brilliant cut and typically has 56 to 58 facets, with six to eight facets making up the diamond’s pavilion.
@@ -307,35 +309,35 @@
                     We’ll help guide you towards the perfect heart shaped diamond in this article.
                 </p>
                 <h1>The Heart Shaped Diamond</h1>
-                <p class="description justify">
+                <p class="decription justify">
                     A timeless symbol of love, a heart shaped diamond is a unique, special alternative to the more common diamond cuts.
                     More than two thirds of all diamonds sold on the market are round brilliants.
                     In contrast, heart shaped diamonds make up only a tiny fraction of the total number of diamonds sold every year, making a heart shaped diamond a unique, rare and special choice.
                 </p>
                 <img src="~/Image/Introlmage/heart.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <p class="description justify">
+                <p class="decription justify">
                     Heart shaped diamonds are used in a variety of jewelry pieces, from pendants to bracelets and more.
                     However, diamonds of this type are most commonly used as a center stone in a diamond engagement ring.
                     Diamonds with a heart shape date back to the 16th century, with the first truly well-known heart shaped diamond ring given as a gift of friendship from Mary Queen of Scots to Queen Elizabeth in 1562.
                 </p>
-                <p class="description justify">
+                <p class="decription justify">
                     More recently, heart shaped diamond engagement rings have been spotted on celebrities such as Nicki Minaj and Lady Gaga, who sported a giant heart-shaped diamond pavé ring when she was engaged to Taylor Kinney.
                     In the last few years, auction house Christie’s attracted attention when it announced it would auction one of the largest heart shaped diamonds online — a stunning 24.45 carat, D color, internally flawless heart shaped diamond valued at an estimated $2.55 million.
                 </p>
                 <h2 class="wp-block-heading">Heart Shaped Diamonds – Price</h2>
-                <p class="description justify">
+                <p class="decription justify">
                     Heart shaped diamonds are generally 15 to 20% cheaper than round cut diamonds of similar cut, clarity, color and carat weight.
                     This means that you can generally get a larger diamond if you opt for a heart shape over a round brilliant cut.
                     Just like with any other diamond shape, pricing for heart shaped diamonds can vary hugely based on the four Cs — cut, color, clarity and carat weight.
                 </p>
-                <p class="description justify">
+                <p class="decription justify">
                     For example, <a aria-label=" (opens in a new tab)" href="https://www.jamesallen.com/loose-diamonds/heart-shaped/1.01-carat-j-color-si1-clarity-sku-11493355?a_aid=dmnd1357&amp;data1=37294" target="_blank" rel="noreferrer noopener nofollow external sponsored" data-wpel-link="advanced" title="" class="external-link">this 1.02 carat J color, SI1 heart shaped diamond from James Allen</a> is available for $2,070. For a diamond of the same size with higher color and clarity grades, <a aria-label=" (opens in a new tab)" rel="noreferrer noopener nofollow external sponsored" href="https://www.jamesallen.com/loose-diamonds/heart-shaped/1.03-carat-d-color-if-clarity-sku-5885951?a_aid=dmnd1357&amp;data1=37294" target="_blank" data-wpel-link="advanced" title="" class="external-link">you could spend as much as $9,110</a>
                     Apply the advice mentioned above, as well as the tips in our guide to <a href="https://www.diamonds.pro/education/diamond-buying-guide/" data-wpel-link="internal">buying a diamond</a>, and you’ll be able to get the largest, high quality diamond without going over your budget.
                 </p>
                 <img src="~/Image/Introlmage/heart2.jpg" alt="Destination 4" style="width: 50%;margin:auto" />
             </div>
             <h2 class="wp-block-heading" id="h-heart-shaped-diamond-color">Heart Shaped Diamond – Color</h2>
-            <p class="description justify container center">
+            <p class="decription justify container center">
                 The diamond color grades used by the GIA range from D to Z, with a D grade indicating that a diamond is completely clear and colorless. At the other end of the scale, a Z grade identifies a diamond with an obvious, clearly visible yellow or brown tint.
                 Heart shaped diamonds are a modified version of the round brilliant cut. Because they reflect lots of light, the color of a heart shaped diamond is harder to distinguish than it is in a diamond with a large table, such as an Emerald or Asscher cut.
                 This means that there’s no need to choose a flawless color grade. Doing so will only increase the price you pay for the diamond, without having any noticeable impact on how it looks when viewed with the naked eye.
