--- a/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
+++ b/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
@@ -6,28 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Montserrat', sans-serif;
-        }
-
         .navbar {
-            background: #333 !important; /* Thay đổi màu nền */
+            background: #fff !important;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 0.5rem 1rem;
+            border-radius: 30px;
             margin-bottom: 20px;
             transition: top 0.3s;
             margin: 0 auto;
+            max-width: 95%;
         }
 
             .navbar .navbar-brand {
                 color: #28a745 !important;
                 font-weight: bold;
-                font-family: 'Playfair Display', serif;
                 display: flex;
                 align-items: center;
             }
@@ -39,7 +32,7 @@
                 }
 
             .navbar .nav-link {
-                color: #fff !important; /* Thay đổi màu chữ */
+                color: #333 !important;
                 font-weight: bold;
                 margin-right: 20px;
                 position: relative;
@@ -47,7 +40,7 @@
 
                 .navbar .nav-link:hover,
                 .navbar .nav-link.active {
-                    color: #ddd !important; /* Thay đổi màu chữ khi hover */
+                    color: #000 !important;
                 }
 
                 .navbar .nav-link:not(.dropdown-toggle)::after {
@@ -125,8 +118,7 @@
         body {
             display: flex;
             flex-direction: column;
-            background-color: #222; /* Thay đổi màu nền */
-            color: #fff; /* Thay đổi màu chữ */
+            background-color: #E9F2EB;
         }
 
         .container {
@@ -134,10 +126,10 @@
         }
 
         .footer {
-            background-color: #333;
+            background-color: #fff;
             padding: 20px 0;
             text-align: center;
-            color: #fff;
+            color: #333;
             box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
             position: relative;
             bottom: 0;
@@ -145,13 +137,13 @@
         }
 
             .footer a {
-                color: #28a745;
+                color: #00509e;
                 text-decoration: none;
                 margin: 0 10px;
             }
 
                 .footer a:hover {
-                    color: #218838;
+                    color: #003f7d;
                     text-decoration: underline;
                 }
 
@@ -189,8 +181,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Index", "Home")">Home</a>
                     </li>
@@ -211,6 +203,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownCart">
                                 <li><a class="dropdown-item" href="@Url.Action("Index", "Cart")">View Cart</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -219,9 +212,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
                                 <li><a class="dropdown-item" href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("WarrantyDetails", "Warranty")">Warranty</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("ViewWarranty", "Warranty")">View Warranty</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("Logout", "Login")">Logout</a></li>
                             </ul>
                         </li>
